--- a/challenges.Rmd
+++ b/challenges.Rmd
@@ -69,10 +69,23 @@ This allows you to split the work, and also to have smaller files — it's easie
 
 // TODO
 
- + Define one person to be in charge of having the big picture of the app. 
- This person will kick off the project, and write the skeleton of the app, with a good module and files structure. 
- This person will also be in charge of accepting new merge requests from other developers, and to orchestrate the master and dev branches. 
-+ List the tasks, and open one issue for each task on your version control system. 
-Each issue will be solved in a separate branch. 
-+ Finally, assign one module to one developer — if it seems that working on one module is a two-person job, divide again into two other submodules. 
-This is a relatively complex task, as the output of one module influences the input of another, so be sure to assign them well. 
+First of all, you'll need one person (or maybe two) to be in charge of supervising the whole project. 
+It's hard to have the complete picture of what the app is doing, and most of the time, as a developer, you don't need to. 
+On the other hand, if the work is correctly splitted between members of the team, you'll probably be focusing on one or more part(s) of the application, but you don't need to know every single bit of what the application is doing. 
+
+But someone has to be get the whole picture: what each part of the software is doing, and how to make all work together, and of course how to check that, at the end of the day, the results returned by the application are the correct ones. 
+This very same person will be the one that kicks off the project, and write the first draft of the application. 
+If you're following the workflow we'll describe in this book, this person in charge of supervising will create a `{golem}` project, fill the information, and define the application structure by providing the modules, and the prototype of the app. 
+
+If you're working following `git flow` (described in chapetr 13), this person in charge of managing the app will also be in charge of reviewing the pull requests and merging them to `dev` if they solve the associated issue.
+Don't worry if this sounds like a foreign language to you, we'll get back to this method in this book. 
+
+Once this skeleton of an app is created, create a series of tasks to be accomplished. 
+Using a Version Control System like `git` will help you there: you'll open a series of issues which will be closed during the development. 
+Other management tools can be used there: for example `redmine`, `jira`, or any issue tracking software can play this role. 
+We strongly suggest to use git, either on GitHub or on GitLab, as it can be easily integrated with R, and of course as it can also be used for doing versioning. 
+
+As the app will be splitted in various Shiny Modules, you can assign the development of one or more module(s) to one member of the team.
+Remember that it's simpler to work in a context where one developer is assigned to one module, even if in reality it's a little bit more complex than that, and several members of the team might go back and forth working on a module. 
+But in a perfect world, one module equals one file, and every body safely works on their own part of the application. 
+Then, only one person is in charge of making all the pieces fit together.
